# algorithmx

./: LICENSE.txt  README.txt  Sudoku.cabal  TODO  build.sh  example.in  run.sh  runtests.sh
src/: ExactCover.hs  Main.hs  Matrix.hs  Sudoku.hs  SudokuParser.hs
tests/: TestExactCover.hs
